conditions.Conditions.scala.code
if (Buggle estFaceMur) {
  forward();
 } else {
  backward();
}